welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:40: error: too many arguments for method growFlowers: ()Unit
  growFlowers(Color.blue)
             ^